refactor: 아키텍처 개선 및 예외 클래스 단순화
- Application layer에서 cross-BC 오케스트레이션 담당
- Domain Services는 각자 BC 내부 규칙만 처리
- NotificationDomainService에서 ActivityDomainService 의존성 제거
- 모든 정적 팩토리 메서드 네이밍 표준화 (from, create)
- Entity 생성자에서 파라미터 검증을 정적 팩토리 메서드로 이동
- 커스텀 예외 클래스들을 최대한 단순한 구조로 리팩토링
- DDD 원칙에 따른 clean architecture 구조 완성

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>